# open-fps

./: .env.editor  .env.game  .gitattributes  .gitignore  AI_DEVELOPMENT_GUIDE.md  OPEN_WORLD_DESIGN_SPEC.md  OPEN_WORLD_ROADMAP.md  README.md  editor.html  game.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  ecs-gameplay.instructions.md  platform-bridge.instructions.md  tauri-backend.instructions.md  terrain-gpu.instructions.md  three-webgpu.instructions.md  ui-react.instructions.md
docs/: development-log.md  runtime-separation.md
kunlun_wilds/: project.json  settings.json
scripts/: cook-map-assets.mjs  execute-world-generation-graph.mjs  generate-default-splatmaps.mjs  generate-map-assets.mjs  generate-paint-map.mjs  generate-terrain-map.mjs  generate-vegetation-map.mjs  generate-world-objects.mjs  run-tauri-target.mjs  run-web-target.mjs  smoke-release-package.mjs  sync-version-from-tag.mjs  validate-map-assets.mjs
src/: App.tsx  main.tsx  tailwind.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.editor.conf.json  tauri.game.conf.json
src-tauri/capabilities/: default.json  game.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: appTarget.ts
test_pro/: map.json  project.json  settings.json
tests/: cooked-world-partition-runtime.test.mjs  map-assets.test.mjs  sidecar-asset-commit.test.mjs  world-debug-rebuild-console.test.mjs  world-generation-graph.test.mjs  world-rebuild-planner.test.mjs  world-semantics.test.mjs
(+6907 files in other folders)
